JUnit testien jälkeen

--- a/OhtuVarasto/pom.xml
+++ b/OhtuVarasto/pom.xml
@@ -40,6 +40,17 @@
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <version>2.6</version>
             </plugin>
+	    
+	    <plugin>
+	      <groupId>org.apache.maven.plugins</groupId>
+	      <artifactId>maven-assembly-plugin</artifactId>
+	      <version>2.2.1</version>
+		<configuration>
+		  <descriptorRefs>
+		    <descriptorRef>jar-with-dependencies</descriptorRef>
+		  </descriptorRefs>
+		</configuration>	      
+	    </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
