--- a/viikko2/Ohtu-NhlStatistics1/pom.xml
+++ b/viikko2/Ohtu-NhlStatistics1/pom.xml
@@ -22,6 +22,12 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>3.1.1.RELEASE</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
