--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /viikko2/Ohtu-NhlStatistics1/target/
+/viikko2/RiippuvuuksienInjektointi1/target/
+/viikko2/RiippuvuuksienInjektointi2/target/
+/viikko2/Verkkokauppa1/target/
