--- a/viikko2/Ohtu-NhlStatistics1/pom.xml
+++ b/viikko2/Ohtu-NhlStatistics1/pom.xml
@@ -32,6 +32,12 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+            
+             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.6</version>
+            </plugin>
         </plugins>
     </build>
 </project>
