vielä yksi jäljellä

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /viikko2/Ohtu-NhlStatistics1/target/
 /viikko2/Verkkokauppa1/target/
 /viikko2/Verkkokauppa1Annotaatiot/target/
+/viikko3/LoginEasyBv1/target/
