--- a/viikko3/Verkkokauppa2/pom.xml
+++ b/viikko3/Verkkokauppa2/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ohtu</groupId>
-    <artifactId>Verkkokauppa1</artifactId>
+    <artifactId>Verkkokauppa4</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Verkkokauppa1</name>
+    <name>Verkkokauppa4</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -23,14 +23,8 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-compiler-plugin</artifactId>
-	<version>3.1</version>
-</dependency>
-            
-    
-            <!-- SPRING -->
+        
+        <!-- SPRING -->
         
         <dependency>
             <groupId>org.springframework</groupId>
@@ -56,18 +50,28 @@
             <version>${org.springframework.version}</version>
         </dependency>
     </dependencies>
+    
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-              <version>3.1</version>
+                <version>2.4</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
                 </configuration>
             </plugin>
-            
-         <plugin>
+        </plugins>
+    </build>
+    
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>2.7.1</version>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.10</version>
@@ -75,6 +79,6 @@
                     <configLocation>my_checks.xml</configLocation>
                 </configuration>
             </plugin>
-       </plugins>
-    </build>
+        </plugins>
+    </reporting>
 </project>
