--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /viikko2/Verkkokauppa1/target/
 /viikko2/Verkkokauppa1Annotaatiot/target/
 /viikko3/LoginEasyBv1/target/
+/viikko4/LyyrakorttiMockito/target/
