--- a/viikko4/MockitoDemo/pom.xml
+++ b/viikko4/MockitoDemo/pom.xml
@@ -4,16 +4,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ohtu</groupId>
-    <artifactId>Verkkokauppa1</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>MockitoDemo</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
-    <name>Verkkokauppa1</name>
+    <name>MockitoDemo</name>
     <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <org.springframework.version>3.1.1.RELEASE</org.springframework.version>
     </properties>
 
     <dependencies>
@@ -23,40 +22,14 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
-    
-            <!-- SPRING -->
-        
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${org.springframework.version}</version>
-        </dependency>        
-        
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${org.springframework.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context-support</artifactId>
-            <version>${org.springframework.version}</version>
-        </dependency>                        
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <version>${org.springframework.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.9.0</version>
             <scope>test</scope>
-            <type>jar</type>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
