viikko 4 3 tehtävän jälkeen

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /viikko2/Ohtu-NhlStatistics1/target/
+/viikko4/viikko4/MockitoDemo/target/
+/viikko4/viikko4/LyyrakorttiMockito/target/
+/viikko4/Verkkokauppa3/target/
