selvitettävä kenttien aX tyyppi

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /viikko2/Verkkokauppa1Annotaatiot/target/
 /viikko3/LoginEasyBv1/target/
 /viikko4/LyyrakorttiMockito/target/
+/viikko5/TyhjaProjekti/target/
